local-llm-client: Java 8+ 新特性落地与文档整理
- record: InferenceRequest, InferenceResult, VideoInfo 改为 record
- switch 表达式: VideoQualityService.determineQuality 使用 switch(tier)
- 文本块: LocalLLMService.buildFullPrompt 使用 """..."""
- Pattern matching for instanceof: resolveInferErrorMessage 使用 instanceof 模式匹配
- 新增 JAVA_FEATURES.md 本模块特性说明
- 新增 JAVA_17_TO_21_FEATURES.md Java 17～21 速览
- 新增 JAVA_VS_OTHER_LANGUAGES.md 与其他语言对照
- 新增 GOROUTINE_VS_VIRTUAL_THREADS.md goroutine 与虚拟线程对比
- README 增加 Java 8+ 新特性说明链接

Co-authored-by: Cursor <cursoragent@cursor.com>